--- a/HTML/member/css/member.css
+++ b/HTML/member/css/member.css
@@ -1,3 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+a {text-decoration: none; color: #111;}
+ul, ol {list-style: none;}
+
+.member {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 :root {
     --body-bg: #fafafa;
     --box-bg: #fff;
@@ -16,13 +29,6 @@
     --box-border-color: #262626;
     --txt-color: #d2d2d2;
 }
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: "Roboto", sans-serif;
     background-color: var(--body-bg);
@@ -118,6 +124,9 @@ body {
     padding-top: 24px;
     margin-bottom: 10px;
 }
+.signin-form-reg {
+    margin-bottom: 10px;
+}
 
 .form-group {
     margin: 0 40px 6px;
@@ -182,6 +191,13 @@ body {
 
 .btn-group {
     padding: 8px 40px;
+}
+.btn-group > p {
+    font-weight: bold;
+    color: #8e8e8e;
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 .btn-login {
