--- a/HTML/css/reset.css
+++ b/HTML/css/reset.css
@@ -37,6 +37,11 @@ ol, ul {
 blockquote, q {
     quotes: none;
 }
+a{
+    list-style: none;
+    text-decoration: none;
+    color: #111;
+}
 blockquote:before, blockquote:after,
 q:before, q:after {
     content: '';
