--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,435 +1,424 @@
-
-
-.m_text{
-    font-size: 14px;
-    font-weight: bold;
+.m_text {
+  font-size: 14px;
+  font-weight: bold;
 }
 
-.s_text{
-    font-size: 12px;
+.s_text {
+  font-size: 12px;
 }
 
-
-body{
-    background:red;
+body {
+  background: red;
 }
 
-
-#header{
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 999;
-    background:white;
-    border-bottom:1px solid rgba(0,0,0,0.1);
+#header {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  background: white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-#header.on{
-    position: fixed;
+#header.on {
+  position: fixed;
 }
 
-#main_container{
-    padding-top: 130px;
-    display: flex;
-    justify-content: center;
+#main_container {
+  padding-top: 130px;
+  display: flex;
+  justify-content: center;
 }
 
-#main_container .inner{
-    width: 935px;
-    /*height: 500px;*/
-    /*background: red;*/
-    position: relative;
-
+#main_container .inner {
+  width: 935px;
+  /*height: 500px;*/
+  /*background: red;*/
+  position: relative;
 }
 
-.contents_box{
-
+.sidebar .logo-img {
+  /* width: 140px;
+    height: 40px; */
 }
 
-.contents{
-    max-width: 614px;
-    border: 1px solid rgba(0,0,0,0.09);
-    border-radius: 3px;
-    margin-bottom: 60px;
-    background: white;
+.contents_box {
 }
 
-.contents .top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+.contents {
+  max-width: 614px;
+  border: 1px solid rgba(0, 0, 0, 0.09);
+  border-radius: 3px;
+  margin-bottom: 60px;
+  background: white;
 }
 
-.contents .top .profile_img{
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    overflow:hidden;
-    margin-right: 10px;
+.contents .top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
 
-.contents .top .profile_img img{
-    width: 100%;
+.contents .top .profile_img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
 }
 
-.contents .top .user_container{
-    display: flex;
+.contents .top .profile_img img {
+  width: 100%;
 }
 
-.contents .top .user_container .user_name .time {font-size: 12px; color: gray;}
-.contents .top .user_container .user_name .followBtn {cursor: pointer; border: 0; background: 0; color: skyblue; font-weight: bold;}
-.contents .top .user_container .user_name .followBtn:hover {color: #111;}
-.contents .top .user_container .user_name .jum {color: gray;}
-.contents .sprite_more_icon{
-    position: relative;
+.contents .top .user_container {
+  display: flex;
 }
 
-.contents .toggle_box{
-    text-align: center;
-    position: absolute;
-    right: 0;
-    top: 20px;
-    border: 1px solid rgba(0,0,0,0.09);
-    border-radius: 3px;
-    display: none;
+.contents .top .user_container .user_name .time {
+  font-size: 12px;
+  color: gray;
+}
+.contents .top .user_container .user_name .followBtn {
+  cursor: pointer;
+  border: 0;
+  background: 0;
+  color: skyblue;
+  font-weight: bold;
+}
+.contents .top .user_container .user_name .followBtn:hover {
+  color: #111;
+}
+.contents .top .user_container .user_name .jum {
+  color: gray;
+}
+.contents .sprite_more_icon {
+  position: relative;
 }
 
-.contents .sprite_more_icon.on .toggle_box{
-    display: block;
+.contents .toggle_box {
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.09);
+  border-radius: 3px;
+  display: none;
 }
 
-.contents .toggle_box > li{
-    padding: 5px 10px;
-    background: white;
+.contents .sprite_more_icon.on .toggle_box {
+  display: block;
 }
 
-.contents .toggle_box > li input{
-    border: none;
-    font-size: inherit;
+.contents .toggle_box > li {
+  padding: 5px 10px;
+  background: white;
 }
 
-.contents .img_section{
-    overflow:hidden;
+.contents .toggle_box > li input {
+  border: none;
+  font-size: inherit;
 }
 
-.contents .img_section img{
-    width: 100%;
+.contents .img_section {
+  overflow: hidden;
 }
 
-.contents .bottom_icons{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+.contents .img_section img {
+  width: 100%;
 }
 
-.contents .bottom_icons .left_icons{
-    display: flex;
+.contents .bottom_icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
 
-.contents .bottom_icons .left_icons > div{
-    margin-right: 10px;
-    cursor:pointer;
+.contents .bottom_icons .left_icons {
+  display: flex;
 }
 
-.contents .bottom_icons .right_icon > div{
-    cursor: pointer;
+.contents .bottom_icons .left_icons > div {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.contents .bottom_icons .right_icon > div {
+  cursor: pointer;
 }
 
 .sprite_heart_icon_outline.on {
-    background: url('/img/background01.png') no-repeat -26px -261px;
+  background: url("./img/background01.png") no-repeat -26px -261px;
 }
 
-.contents .likes{
-    padding: 5px 20px;
-    color:#262626;
+.contents .likes {
+  padding: 5px 20px;
+  color: #262626;
 }
 
-.contents .comment_container{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 20px;
+.contents .comment_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
 }
-.contents .comment_container .comment{
-    display:flex;
-    flex-direction: column;
-    font-size: 14px;
-}
-
-.contents .comment_container .comment-detail{
-    display: flex;
+.contents .comment_container .comment {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
 }
 
-.contents .comment_container .comment .nick_name{
-    margin-right: 10px;
+.contents .comment_container .comment-detail {
+  display: flex;
 }
 
-.contents .timer{
-    font-size: 14px;
-    letter-spacing: 0.2px;
-    border-bottom: 1px solid rgba(0,0,0,0.09);
-    padding: 10px 20px;
-    margin-left: 1px;
+.contents .comment_container .comment .nick_name {
+  margin-right: 10px;
+}
+
+.contents .timer {
+  font-size: 14px;
+  letter-spacing: 0.2px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.09);
+  padding: 10px 20px;
+  margin-left: 1px;
 }
 
 .contents .timer > a {
-    color: gray;
+  color: gray;
 }
 
-.contents .comment_field{
-    min-height:56px;
-    padding: 0 20px;
-    position: relative;
+.contents .comment_field {
+  min-height: 56px;
+  padding: 0 20px;
+  position: relative;
 }
 
-.contents .comment_field input{
-    width: 100%;
-    height: 56px;
-    border: none;
-    outline:none;
-    background: transparent;
+.contents .comment_field input {
+  width: 100%;
+  height: 56px;
+  border: none;
+  outline: none;
+  background: transparent;
 }
 
-.contents .comment_field input:focus ~ .upload_btn{
-    pointer-events: initial;
-    opacity: 1;
+.contents .comment_field input:focus ~ .upload_btn {
+  pointer-events: initial;
+  opacity: 1;
 }
 
-.contents .comment_field .upload_btn{
-    color:#3897f0;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform:translateY(-50%);
-    cursor: pointer;
-    /*pointer-events: none;*/
-    opacity: 0.6;
+.contents .comment_field .upload_btn {
+  color: #3897f0;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  /*pointer-events: none;*/
+  opacity: 0.6;
 }
 
-.side_box{
-    width: 293px;
-    /*height: 300px;*/
-    /*background: rgba(255, 0, 0, 0.16);*/
-    position:absolute;
-    right: 0;
-    top: 0;
+.side_box {
+  width: 293px;
+  /*height: 300px;*/
+  /*background: rgba(255, 0, 0, 0.16);*/
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
-.side_box.on{
-    position: fixed;
-    top: 80px;
+.side_box.on {
+  position: fixed;
+  top: 80px;
 }
-.side_box .profile_thumb{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    overflow:hidden;
-    margin-right: 10px;
-}
-
-.side_box .profile_thumb img{
-    width: 100%;
-    height:100%;
+.side_box .profile_thumb {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
 }
 
-.side_box .user_profile{
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    color:#262626;
+.side_box .profile_thumb img {
+  width: 100%;
+  height: 100%;
+}
+
+.side_box .user_profile {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #262626;
 }
 
 .side_box .info {
-    margin-top: 30px;
-    font-size: 12px;
+  margin-top: 30px;
+  font-size: 12px;
 }
 
-.side_box .info > nav{
-    width: 100%;
-    line-height: normal;
-    margin-bottom: 20px;
+.side_box .info > nav {
+  width: 100%;
+  line-height: normal;
+  margin-bottom: 20px;
 }
-.side_box .info > span{
-    
-    font-size: 12px;
-    color: gray;
+.side_box .info > span {
+  font-size: 12px;
+  color: gray;
 }
 .side_box .info > nav > ul > li {
-    display: inline-block;
+  display: inline-block;
 }
-.side_box .info > nav > ul > li > a{
-    color: gray;
-}
-
-.side_box .detail .id{
-    margin-bottom: 5px;
+.side_box .info > nav > ul > li > a {
+  color: gray;
 }
 
-.side_box .detail .ko_name{
-    font-size: 12px;
-    color:#999;
+.side_box .detail .id {
+  margin-bottom: 5px;
+}
+
+.side_box .detail .ko_name {
+  font-size: 12px;
+  color: #999;
 }
 
 .side_box .trans > a {
-    margin-left: 137px;
-    font-weight: bold;
-    color: skyblue;
+  margin-left: 137px;
+  font-weight: bold;
+  color: skyblue;
 }
 
-.side_box > article{
-    border: 1px solid rgba(0,0,0,0.09);
-    border-radius: 3px;
-    margin-bottom: 20px;
-    width: 291px;
-    font-size: 14px;
-    color:#262626;
-    font-weight: bold;
-    background: white;
+.side_box > article {
+  border: 1px solid rgba(0, 0, 0, 0.09);
+  border-radius: 3px;
+  margin-bottom: 20px;
+  width: 291px;
+  font-size: 14px;
+  color: #262626;
+  font-weight: bold;
+  background: white;
 }
 
-.side_box > article > header{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 20px;
-    color:#999;
+.side_box > article > header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 20px;
+  color: #999;
 }
 
-.side_box > article > header .more{
-    font-size: 12px;
-    color:#262626;
-    cursor:pointer;
+.side_box > article > header .more {
+  font-size: 12px;
+  color: #262626;
+  cursor: pointer;
 }
 
-.thumb_user{
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
+.thumb_user {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
 }
 
-.thumb_user .profile_thumb{
-    width: 34px;
-    height: 34px;
+.thumb_user .profile_thumb {
+  width: 34px;
+  height: 34px;
 }
 
-.thumb_user .time{
-    font-size: 10px;
-    letter-spacing: 0.2px;
-    color:#999;
+.thumb_user .time {
+  font-size: 10px;
+  letter-spacing: 0.2px;
+  color: #999;
 }
 
-.side_box .scroll_inner{
-    height: 182px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    /*overflow:hidden auto;*/
+.side_box .scroll_inner {
+  height: 182px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  /*overflow:hidden auto;*/
 }
 
-.hidden_menu{
-    
-    width: 666px;
-    /* background: red; */
-    position: relative;
-    left: 43%;
-    transform: translateX(-50%);
-    top: 60px;
-    overflow: hidden;
-    border: 1px solid rgba(0,0,0,0.09);
-    border-radius: 3px;
+.hidden_menu {
+  width: 666px;
+  /* background: red; */
+  position: relative;
+  left: 43%;
+  transform: translateX(-50%);
+  top: 60px;
+  overflow: hidden;
+  border: 1px solid rgba(0, 0, 0, 0.09);
+  border-radius: 3px;
 }
 
-.hidden_menu .scroll_inner{
-    height: 100px;
-    width: auto;
-    overflow-x: auto;
-    overflow-y: hidden;
-    display: flex;
-    align-items: center;
-    padding: 0 10px;
+.hidden_menu .scroll_inner {
+  height: 100px;
+  width: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
 }
 
-.hidden_menu .scroll_inner .user{
-    width: 80px;
-    height: 80px;
+.hidden_menu .scroll_inner .user {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 15px;
+  justify-content: space-between;
+}
+
+.hidden_menu .scroll_inner .user .id {
+  font-size: 12px;
+  color: #262626;
+}
+.hidden_menu .thumb_img {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.hidden_menu .thumb_img img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  #header .inner {
+    width: 97.5%;
+  }
+
+  #main_container {
+    padding-top: 220px;
+  }
+  #main_container .inner {
+    width: 93.5%;
+  }
+
+  .contents_box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 15px;
-    justify-content: space-between;
+  }
+  .side_box {
+    display: none;
+  }
+
+  .hidden_menu {
+    display: block;
+  }
 }
 
-.hidden_menu .scroll_inner .user .id{
-    font-size: 12px;
-    color:#262626;
+@media screen and (max-width: 650px) {
+  #header .search_box {
+    display: none;
+  }
+
+  .hidden_menu {
+    width: 95%;
+  }
 }
-.hidden_menu .thumb_img{
-    width: 56px;
-    height: 56px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.hidden_menu .thumb_img img{
-    width: 100%;
-    height: 100%;
-}
-
-@media screen and (max-width:1000px){
-
-    #header .inner{
-        width: 97.5%;
-    }
-
-    #main_container{
-        padding-top: 220px;
-    }
-    #main_container .inner{
-        width: 93.5%;
-
-    }
-
-    .contents_box{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .side_box{
-        display: none;
-    }
-
-
-    .hidden_menu{
-        display:block;
-
-    }
-}
-
-@media screen and (max-width:650px){
-
-    #header .search_box{
-        display:none;
-    }
-
-    .hidden_menu{
-        width: 95%;
-    }
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
