--- a/HTML/member/css/member.css
+++ b/HTML/member/css/member.css
@@ -366,3 +366,116 @@ button:disabled {
         background-color: transparent;
     }
 }
+
+/* SECTION - BIRTH */
+select.box {
+    width: 100%;
+    height: 50px;
+    box-sizing: border-box;
+    margin-left: 5px;
+    padding: 5px 0 5px 10px;
+    border-radius: 4px;
+    border: 1px solid #d9d6d6;
+    color: #383838;
+    background-color: #ffffff;
+    font-family: 'Montserrat', 'Pretendard', sans-serif;
+}
+option {
+    font-size: 16px;
+}
+.info .box#domain-list option {
+    font-size: 14px;
+    background-color: #ffffff;
+}
+.info#info__birth {
+    display: flex;
+}
+.info#info__birth select {
+    margin-left : 7px;
+}
+.info#info__birth select:first-child {
+    margin-left : 0px;
+}
+.info#info__birth select::-webkit-scrollbar {
+    width: 10px;
+}
+
+.info#info__birth select::-webkit-scrollbar-thumb {
+    background-color: #b6b6b6;
+    border-radius: 3px;
+}
+
+.info#info__birth select::-webkit-scrollbar-track {
+    background-color: #ebe9e9;
+    border-radius: 6px;
+}
+
+/* birth */
+.birth-logo img {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    display: block;
+}
+.birth p {
+    font-size: 14px;
+    margin: 15px;
+    text-align: center;
+    font-weight: bold;
+}
+.birth div {
+    font-size: 14px;
+    margin: 15px;
+    text-align: center;
+}
+.birth div > a {
+    color: var(--btn-bg);
+}
+.birth2 div {
+    font-size: 12px;
+    margin: 15px;
+    text-align: center;
+    color: #8e8e8e;
+}
+/* email */
+.email-logo img {
+    width: 100px;
+    height: 75px;
+    margin: auto;
+    display: block;
+}
+.email-input input {
+    width: 100%;
+    height: 32px;
+    font-size: 15px;
+    border: 0;
+    border-radius: 15px;
+    outline: none;
+    padding-left: 10px;
+    background-color: rgb(233, 233, 233);
+}
+
+/* terms */
+.clearfix::after{content: "";display: block;clear: both;}
+
+#clearfix {
+    border-bottom: 1px solid #ddd;
+}
+.checkBox,.checkBox>ul{position: relative;}
+.checkBox>ul>li{float: left;}
+.checkBox>ul>li:first-child{
+    width: 85%;
+    padding: 15px;
+    font-weight: 500;
+}
+.clearfix a {
+    color: var(--btn-bg);
+    font-size: 14px;
+}
+.checkBox>ul>li:nth-child(2){position: absolute;top: 50%;right: 30px;margin-top: -12px;}
+.checkBox textarea{width: 96%;height: 90px; margin: 0 2%;background-color: #f7f7f7;color: #888; border: none;}
+.footBtwrap{margin-top: 15px;}
+.footBtwrap>li{float: left;width: 50%;height: 60px;}
+.footBtwrap>li>button{display: block; width: 100%;height: 100%; font-size: 20px;text-align: center;line-height: 60px;}
+.fpmgBt1{background-color: #fff;color:#888}
+.fpmgBt2{background-color: lightsalmon;color: #fff}
