--- a/Spring/Photostagram/src/main/resources/templates/member/login.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/login.html
@@ -17,6 +17,9 @@
     내용 : 로그인 화면
 -->
 <body>
+<th:block layout:fragment="main">
+
+</th:block>
     <div class="container">
         <div class="main-container">
             <div class="main-content">
