--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -5,7 +5,7 @@
     <!--sidebar 기본-->
     <aside class="sidebar">
         <header class="sidebar-header">
-            <img class="logo-img" src="./img/photostagram_logo.png" />
+            <img class="logo-img" th:src="@{/img/photostagram_logo.png}" />
             <i class="logo-icon uil uil-instagram"></i>
         </header>
         <nav>
