2023/03/06 레이아웃 통합

--- a/HTML/profile/css/profile.css
+++ b/HTML/profile/css/profile.css
@@ -30,7 +30,8 @@ main > section > .myProfile > .proPhoto {
     margin-right:100px; 
     width: 200px;
 }
-main > section > .myProfile > .proPhoto > div > img {width: 150px;}
+main > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
+main > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
 main > section > .myProfile > .detail {float:left; width:500px;}
 main > section > .myProfile > .detail > .pTop {
     display: block; 
