--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -1,675 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Instagram</title>
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-    />
-    <link
-            href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
-            rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/aside.css">
-    <link rel="stylesheet" href="./css/profile.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="../js/aside.js"></script>
-    <script>
-      $(function(){
-        //게시글 업로드 버튼 클릭시(ajax추가하면 됨)
-      $('#button_write_feed').on('click', ()=>{
-        const image = $('#input_image').css("background-image").replace(/^url\(['"](.+)['"]\)/, '$1');
-        const content = $('#input_content').val();
-        const profile_image = $('#input_profile_image').attr('src');
-        const user_id = $('#input_user_id').text();
+<html xmlns:th="http://www.thymleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}">
 
-        const file = files[0];
-
-        let fd = new FormData();
-
-        fd.append('file', file);
-        fd.append('image', image);
-        fd.append('content', content);
-        fd.append('profile_image', profile_image);
-        fd.append('user_id', user_id);
-
-        if(image.length <= 0)
-        {
-            alert("이미지가 비어있습니다.");
-        }
-        else if(content.length <= 0)
-        {
-            alert("설명을 입력하세요");
-        }
-        else if(profile_image.length <= 0)
-        {
-            alert("프로필 이미지가 비어있습니다.");
-        }
-        else if(user_id.length <= 0)
-        {
-            alert("사용자 id가 없습니다.");
-        }
-        else{
-            writeFeed(fd);
-            console.log(files[0]);
-        }
-      });
-      });
-    </script>
-    <!-- follow, following 스타일 변화 -->
-    <script>
-      $(function(){
-        $('#follow').click(function(){
-          $('#follow').hide();
-          $('#following').show();
-        });
-      });
-      $(function(){
-        $('#following').click(function(){
-          $('#following').hide();
-          $('#follow').show();
-        });
-      });
-    </script>
-    <!-- modal 창 띄우기 -->
-    <script>
-      $(function(){
-        var modal = document.getElementById("fCancel");
-        var btn = document.getElementById("following");
-        var span = document.getElementsByClassName("fClose")[0];
-
-        btn.onclick = function() {
-          modal.style.display = "block";
-        }
-
-        span.onclick = function() {
-          modal.style.display = "none";
-        }
-
-        window.onclick = function(event) {
-          if (event.target == modal) {
-            modal.style.display = "none";
-          }
-        }
-      });
-    </script>
-    <style>
-      #following {display: none;}
-
-      .fModal {
-        display: none; 
-        position: fixed; 
-        z-index: 1; 
-        left: 0;
-        top: 0;
-        width: 100%; 
-        height: 100%; 
-        overflow: auto; 
-        background-color: rgba(0,0,0,0.4); 
-      }
-
-      .fContents {
-        background-color: #fefefe;
-        margin: 15% auto; 
-        padding: 20px;
-        border: 1px solid #888;
-        width: 500px; 
-        border-radius: 10px;
-      }
-
-      .fContents > #fTop {margin-left: 185px; width:55px; position: relative; text-align: center;padding: 20px;}
-      .fContents > #fTop > img {display: inline-block; width: 55px; height: auto; vertical-align: middle;}
-      .fContents > #fTop > span {display: inline-block; width: 55px; height: auto; vertical-align: middle; font-size: 14px; font-weight: bold; margin-top: 5px;}
-      .fContents > #fBottom {border-top: 1px solid #e9e9e9; }
-      .fClose {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-      }
-
-      .fClose:hover,
-      .fClose:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-      }
-
-    </style>
-  </head>
-  <body>
-    <!--sidebar 기본-->
-    <aside class="sidebar">
-      <header class="sidebar-header">
-        <img class="logo-img" src="./img/photostagram_logo.png" />
-        <i class="logo-icon uil uil-instagram"></i>
-      </header>
-      <nav>
-
-        <button>
-            <a href="">
-              <i class="uil uil-estate"></i>
-              <span>홈</span>
-            </a>
-        </button>
-
-        <button id="search">
-          <span>
-              <i class="uil uil-search"></i>
-              <span>검색</span>
-          </span>
-        </button>
-
-        <button>
-          <a href="">
-            <i class="uil uil-compass"></i>
-            <span>탐색 탭</span>
-          </a>
-        </button>
-
-        <button>
-          <a href="">
-            <i class="uil uil-location-arrow"></i>
-            <span>메시지</span>
-          </a>
-        </button>
-
-        <button id="alarm">
-          <span>
-            <i class="uil uil-heart"></i>
-            <span>알림</span>
-          </span>
-        </button>
-
-        <button id="add_feed">
-          <span>
-            <i class="uil uil-plus-circle"> </i>
-            <span>만들기</span>
-          </span>
-        </button>
-
-        <button>
-          <span>
-            <img src="https://raw.githubusercontent.com/zouraiz523/Instagram-Sidebar-/b2750eba8fa31cde49364428bf28fbb41b3a02f0/Instagram%20Sidebar%20Coding/Profile.svg" />
-            <span>프로필</span>
-          </span>
-        </button>
-
-        <button id="more_view">
-          <span>
-            <i class="uil uil-bars"> </i>
-            <span>더보기</span>
-          </span>
-        </button>
-      </nav>
-    </aside>
-    <!--sidebar 축소(검색, 알람창 선택시)-->
-    <aside class="side">
-      <header class="sidebar-header">
-        <img class="logo-img" src="https://raw.githubusercontent.com/zouraiz523/Instagram-Sidebar-/b2750eba8fa31cde49364428bf28fbb41b3a02f0/Instagram%20Sidebar%20Coding/Profile.svg" />
-        <i class="logo-icon uil uil-instagram"></i>
-      </header>
-      <nav>
-
-        <button>
-            <a href="">
-              <i class="uil uil-estate"></i>
-            </a>
-        </button>
-
-        <button id="search_close">
-          <span>
-              <i class="uil uil-search"></i>
-          </span>
-        </button>
-
-        <button>
-          <a href="">
-            <i class="uil uil-compass"></i>
-          </a>
-        </button>
-
-        <button>
-          <a href="">
-            <i class="uil uil-location-arrow"></i>
-          </a>
-        </button>
-
-        <button id="alarm_close">
-          <span>
-            <i class="uil uil-heart"></i>
-          </span>
-        </button>
-
-        <button>
-          <span>
-            <i class="uil uil-plus-circle"> </i>
-          </span>
-        </button>
-
-        <button>
-          <span>
-            <img src="https://raw.githubusercontent.com/zouraiz523/Instagram-Sidebar-/b2750eba8fa31cde49364428bf28fbb41b3a02f0/Instagram%20Sidebar%20Coding/Profile.svg" />
-          </span>
-        </button>
-
-        <button>
-          <span>
-            <i class="uil uil-bars"> </i>
-          </span>
-        </button>
-      </nav>
-    </aside>
-    <!--검색창-->
-    <div class="sidesearch">
-        <div>
-            <h2>검색</h2>
-            <input type="text" name="search" id="searchAll" placeholder="검색"></input>   
-            <button><img src="./img/search.png" alt=""></button>    
-        </div>
-        <div>
-            <h3>최근 검색 항목 <button>모두 지우기</button></h3>
-        </div>
-    
-        <div class="searchListAll">
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-         
-          <div class="searchlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-              <div>
-                <h3>nickname</h3>
-              </div>
-              <div>
-                <h8>text</h8>
-              </div>
-            </div>
-            <div>
-              <button>
-                <img src="./img/aside_x.PNG" alt="">
-              </button>
-            </div>
-          </div>
-        </div>
-        
-    </div>
-
-    <!--알림창-->
-    <div class="sidealarm">
-        <div>
-            <h2>알림</h2>
-        </div>
-        <div class="alarmListAll">
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-          <div class="alarmlist">
-            <div>
-              <img src="./img/aside_seller_ico.PNG" alt="">
-            </div>
-            <div>
-                <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-            </div>
-            <div>
-                <img src="./img/aside_x.PNG" alt="">
-            </div>
-          </div>
-        </div>
-    </div>
-    
-    <!--더보기 선택시 팝업-->
-    <div class="more_logout">
-      <a href="">로그아웃</a>
-    </div>
 <main id="wrapper">
   <section>
       <div class="myProfile">
