--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -10,7 +10,6 @@ input, textarea {outline: none;}
 
 #pro {
     width: 1000px;
-    margin-left: 500px;
     margin-top:20px;
 }
 #pro > section {width: 100%;}
@@ -30,7 +29,8 @@ input, textarea {outline: none;}
     margin-right:100px; 
     width: 200px;
 }
-#pro > section > .myProfile > .proPhoto > div > img {width: 150px;}
+#pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
+#pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
 #pro > section > .myProfile > .detail {float:left; width:500px;}
 #pro > section > .myProfile > .detail > .pTop {
     display: block; 
@@ -103,43 +103,49 @@ input, textarea {outline: none;}
 #pro > section > .myList > .pic > a > img {max-width: 300px; max-height: 300px;}
 #pro > section > .myList {margin-top: 50px;}
 
-#following {display: none;}
+  #following {display: none;}
 
-.fModal {
-display: none;
-position: fixed;
-z-index: 1;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-overflow: auto;
-background-color: rgba(0,0,0,0.4);
-}
+  .fModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.4);
+    -ms-overflow-style: none;
+  }
+  .fModal::-webkit-scrollbar {display: none;}
 
-.fContents {
-background-color: #fefefe;
-margin: 15% auto;
-padding: 20px;
-border: 1px solid #888;
-width: 500px;
-border-radius: 10px;
-}
+  .fContents {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 400px;
+    border-radius: 10px;
+  }
 
-.fContents > #fTop {margin-left: 185px; width:55px; position: relative; text-align: center;padding: 20px;}
-.fContents > #fTop > img {display: inline-block; width: 55px; height: auto; vertical-align: middle;}
-.fContents > #fTop > span {display: inline-block; width: 55px; height: auto; vertical-align: middle; font-size: 14px; font-weight: bold; margin-top: 5px;}
-.fContents > #fBottom {border-top: 1px solid #e9e9e9; }
-.fClose {
-color: #aaa;
-float: right;
-font-size: 28px;
-font-weight: bold;
-}
+  .fContents > #fTop {margin-left: 135px; width:55px; position: relative; text-align: center;padding: 20px;}
+  .fContents > #fTop > img {display: inline-block; width: 55px; height: auto; vertical-align: middle;}
+  .fContents > #fTop > span {display: inline-block; width: 55px; height: auto; vertical-align: middle; font-size: 14px; font-weight: bold; margin-top: 5px;}
+  .fContents > #fBottom {border-top: 1px solid #e9e9e9;}
+  .fContents > #fBottom > li {display: block; height: 40px; box-sizing: border-box;}
+  .fContents > #fBottom > li > a {top: 14px; position: relative; float: left; display: block; width: 350px; font-size: 14px; }
+  .fContents > #fBottom > li > a > span {float:left;}
+  .fContents > #fBottom > li > a > i {float: right;}
 
-.fClose:hover,
-.fClose:focus {
-color: black;
-text-decoration: none;
-cursor: pointer;
-}
+  .fClose {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+  }
+
+  .fClose:hover,
+  .fClose:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
