--- a/Spring/Photostagram/src/main/resources/templates/layout/layout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/layout.html
@@ -25,14 +25,16 @@
           href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
           rel="stylesheet"
   />
-
-  <link rel="stylesheet" th:href="@{/css/aside.css]" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+  <link rel="stylesheet" th:href="@{/css/aside.css}" />
   <link rel="stylesheet" th:href="@{/css/profile.css}">
   <link rel="stylesheet" th:href="@{/css/profileModify.css}">
+  <link rel="stylesheet" th:href="@{/css/post.css}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script th:src="@{/js/aside.js}"></script>
   <script th:src="@{/js/index.js}"></script>
   <script th:src="@{/js/proFollow.js}"></script>
+  <script th:src="@{/js/post.js}"></script>
 </head>
 <body>
 <div id="wrapper">
