--- a/Spring/Photostagram/src/main/resources/templates/profile/modify.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/modify.html
@@ -2,100 +2,100 @@
 <html xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
-
-<main id="modi">
-  <div id="myInfo">
-      <div>
-          <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
-          <div>
-              <span>gildong</span>
-              <a href="#">프로필 사진 바꾸기</a>
+    <th:block layout:fragment="main">
+        <div id="modi">
+          <div id="myInfo">
+              <div>
+                  <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile">
+                  <div>
+                      <span>gildong</span>
+                      <a href="#">프로필 사진 바꾸기</a>
+                  </div>
+              </div>
+              <form action="#" method="">
+                  <table>
+                      <tbody>
+                          <tr>
+                              <td>
+                                  <span>이름</span>
+                              </td>
+                              <td>
+                                  <input type="text" value="홍길동"><br/>
+                                  <span>사람들이 이름, 별명 또는 비즈니스 이름 등 회원님의 알려진 이름을 사용하여 회원님의 계정을 찾을 수 있도록 도와주세요.</span>
+                                  <span>이름은 14일 안에 두 번만 변경할 수 있습니다.</span>
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>
+                                  <span>사용자 이름</span>
+                              </td>
+                              <td>
+                                  <input type="text" value="gildong">
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>
+                                  <span>웹사이트</span>
+                              </td>
+                              <td>
+                                  <input type="text" value="웹사이트">
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>
+                                  <span>소개</span>
+                              </td>
+                              <td>
+                                  <textarea name="intro" id="intro"></textarea>
+                                  <span>0 / 150</span>
+                              </td>
+                          </tr>
+                          <tr>
+                              <td></td>
+                              <td id="private">
+                                  개인 정보 <br/>
+                                  비즈니스나 반려동물 등에 사용된 계정인 경우에도 회원님의 정보를 입력하세요. 공개 프로필에는 포함되지 않습니다.
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>
+                                  <span>이메일</span>
+                              </td>
+                              <td>
+                                  <input type="email" value="gildong@gmail.com">
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>
+                                  <span>전화번호</span>
+                              </td>
+                              <td>
+                                  <input type="text" placeholder="전화번호">
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>
+                                  <span>성별</span>
+                              </td>
+                              <td>
+                                  <input type="text" value="밝히고 싶지 않음">
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>
+                                  <span>프로필에 계정 추천 표시</span>
+                              </td>
+                              <td>
+                                  <input type="checkbox" value="1" id="check">
+                                  <span>사람들이 회원님의 프로필에서 비슷한 계정 추천을 볼 수 있는지와 회원님의 계정이 다른 프로필에서 추천될 수 있는지를 선택하세요.</span>
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+                  <input type="submit" value="제출">
+              </form>
+              <a href="#">일시적으로 내 계정 비활성화하기</a>
           </div>
-      </div>
-      <form action="#" method="">
-          <table>
-              <tbody>
-                  <tr>
-                      <td>
-                          <span>이름</span>
-                      </td>
-                      <td>
-                          <input type="text" value="홍길동"><br/>
-                          <span>사람들이 이름, 별명 또는 비즈니스 이름 등 회원님의 알려진 이름을 사용하여 회원님의 계정을 찾을 수 있도록 도와주세요.</span>
-                          <span>이름은 14일 안에 두 번만 변경할 수 있습니다.</span>
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <span>사용자 이름</span>
-                      </td>
-                      <td>
-                          <input type="text" value="gildong">
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <span>웹사이트</span>
-                      </td>
-                      <td>
-                          <input type="text" value="웹사이트">
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <span>소개</span>
-                      </td>
-                      <td>
-                          <textarea name="intro" id="intro"></textarea>
-                          <span>0 / 150</span>
-                      </td>
-                  </tr>
-                  <tr>
-                      <td></td>
-                      <td id="private">
-                          개인 정보 <br/>
-                          비즈니스나 반려동물 등에 사용된 계정인 경우에도 회원님의 정보를 입력하세요. 공개 프로필에는 포함되지 않습니다.
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <span>이메일</span>
-                      </td>
-                      <td>
-                          <input type="email" value="gildong@gmail.com">
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <span>전화번호</span>
-                      </td>
-                      <td>
-                          <input type="text" placeholder="전화번호">
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <span>성별</span>
-                      </td>
-                      <td>
-                          <input type="text" value="밝히고 싶지 않음">
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <span>프로필에 계정 추천 표시</span>
-                      </td>
-                      <td>
-                          <input type="checkbox" value="1" id="check">
-                          <span>사람들이 회원님의 프로필에서 비슷한 계정 추천을 볼 수 있는지와 회원님의 계정이 다른 프로필에서 추천될 수 있는지를 선택하세요.</span>
-                      </td>
-                  </tr>
-              </tbody>
-          </table>
-          <input type="submit" value="제출">
-      </form>
-      <a href="#">일시적으로 내 계정 비활성화하기</a>
-  </div>
-</main>
-  </body>
+        </div>
+    </th:block>
 </html>
