--- a/Spring/Photostagram/src/main/resources/static/css/post.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post.css
@@ -49,12 +49,20 @@
       font-weight: bold;
       bottom: 5px;
     }
-    #post > .contents > nav > #profile > .postTop > a {
+    #post > .contents > nav > #profile > .postTop > #postFollow {
       position: relative;
       margin-left: 1px;
       font-size: 14px;
       font-weight: bold; color:#0095f6;
       bottom: 3px;
+    }
+    #post > .contents > nav > #profile > .postTop > #postFollowing {
+      position: relative;
+      margin-left: 1px;
+      font-size: 14px;
+      font-weight: bold; color:#a9a9a9;
+      bottom: 3px;
+      display: none;
     }
     #post > .contents > nav > a {
       float: right;
@@ -220,3 +228,35 @@
       margin-right: 50px;
       margin-left: 25px;
     }
+
+    .pModal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: rgba(0,0,0,0.4);
+      -ms-overflow-style: none;
+    }
+    .pModal::-webkit-scrollbar {display: none;}
+    #pCancel > .pContents {
+      background-color: #fefefe;
+      margin: 15% auto;
+      border: 1px solid #888;
+      width: 400px;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
+    .pContents > div {display: block; width:400px; height: 150px; position: relative; text-align: center; padding: 20px; box-sizing: border-box;}
+    .pContents > div > img {display: inline-block; width: 75px; height: auto;}
+    .pContents > div > h1 {text-align: center; font-size: 14px; margin-top: 5px;}
+    .pContents > div > h1 > span {font-weight: bold;}
+
+    .pContents > ul {text-align: center;}
+    .pContents > ul > li {text-align: center; border-top:1px solid #e9e9e9; display: block; height: 50px; line-height: 50px; box-sizing: border-box;}
+    .pContents > ul > li > a {font-size: 14px; font-weight: bold;}
+    .pContents > ul > li:nth-child(1) > a {color: red;}
+
