--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -11,6 +11,7 @@ input, textarea {outline: none;}
 #pro {
     width: 1000px;
     margin-top:20px;
+    margin-left:500px;
 }
 #pro > section {width: 100%;}
 #pro > section > div {display: block;}
@@ -43,6 +44,8 @@ input, textarea {outline: none;}
     float:left; 
     padding-right:15px; 
     font-size: 24px;
+    height: 40px;
+    line-height: 40px;
 }
 #pro > section > .myProfile > .detail > .pTop > .button {
     margin: 2px;
@@ -134,7 +137,7 @@ input, textarea {outline: none;}
   .fContents > #fBottom {border-top: 1px solid #e9e9e9;}
   .fContents > #fBottom > li {display: block; height: 40px; box-sizing: border-box;}
   .fContents > #fBottom > li > a {top: 14px; position: relative; float: left; display: block; width: 350px; font-size: 14px; }
-  .fContents > #fBottom > li > a > span {float:left;}
+  .fContents > #fBottom > li > a > span {float:left; font-size:14px;}
   .fContents > #fBottom > li > a > i {float: right;}
 
   .fClose {
