--- a/Spring/Photostagram/src/main/resources/static/css/profileModify.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profileModify.css
@@ -9,7 +9,8 @@
     input, textarea {outline: none;}
 
     #modi {
-        width: 1200px;
+        width: 1000px;
+        margin-left: 500px;
         margin-top: 50px;
     }
 
