--- a/Spring/Photostagram/src/main/resources/templates/member/login.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/login.html
@@ -24,7 +24,7 @@
                         </div>
                         
                         <div class="signin-form" id="signin-form">
-                            <form th:action="@{/member/login}">
+                            <form th:action="@{/member/login}" method="post">
                                 <div class="form-group">
                                     <div class="animate-input">
                                         <span>
