--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -76,7 +76,105 @@
       <div class="inner">
 
         <div class="contents_box">
+          <!-- 메인콘텐츠 -->
+          <article class="contents">
+            <header class="top">
+              <div class="user_container">
+                <!----- 게시글 유저 프로필사진, 아이디 ------>
+                <div class="profile_img">
+                  <a href="#"
+                  ><img src="./img/thumb.jpeg" alt="프로필이미지"
+                  /></a>
+                </div>
+                <div class="user_name">
+                  <div class="nick_name m_text">
+                    <a href="#">KindTiger</a> <span class="jum">•</span>
+                    <span class="time">1일</span> <span class="jum">•</span>
+                    <input type="button" class="followBtn" value="팔로우" />
+                  </div>
+                  <div class="country s_text">Seoul, South Korea</div>
+                </div>
+              </div>
 
+              <!------ 게시글 상단 토글박스 ------>
+              <div class="sprite_more_icon">
+                <div class="moreIcon" data-name="more"></div>
+              </div>
+            </header>
+
+            <!------- 게시글 사진 ------>
+            <div class="img_section">
+              <div class="trans_inner">
+                <div>
+                  <img src="./img/img_section/img01.jpg" alt="visual01" />
+                </div>
+              </div>
+            </div>
+
+            <!----- 좋아요, 댓글리스트, 공유, 북마크 ----->
+            <div class="bottom_icons">
+              <div class="left_icons">
+                <div class="heart_btn">
+                  <div
+                          class="sprite_heart_icon_outline"
+                          name="39"
+                          data-name="heartbeat"
+                  ></div>
+                </div>
+                <div class="sprite_bubble_icon"></div>
+                <div class="sprite_dm_icon" data-name="share">
+                  <img src="./img/DM-image.png" alt="" />
+                </div>
+              </div>
+              <div class="right_icon">
+                <div
+                        class="sprite_bookmark_outline"
+                        data-name="bookmark"
+                ></div>
+              </div>
+            </div>
+
+            <div class="likes m_text">
+              좋아요 <span id="like-count-39">2,346</span>개
+            </div>
+
+            <!----- 작성자 코멘트 ------>
+            <div class="comment_container">
+              <div class="comment" id="comment-list-ajax-post37">
+                <div class="comment-detail">
+                  <div class="nick_name m_text">
+                    <a href="#">KindTiger</a>
+                  </div>
+                  <div class="commentWord">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo recusandae eos nihil sint itaque ea, alias nemo nam repellendus in delectus quas doloremque, numquam eaque inventore iure facere, vitae neque?
+                  </div>
+                </div>
+              </div>
+
+              <div class="reply_user">
+                <span class="reply_nick">j_hlli</span>
+                <span class="reply_content">강아지가 너무 귀여워요!</span>
+                <span class="small_heart">
+                  <div class="sprite_small_heart_icon_outline" ></div>
+                </span>
+              </div>
+
+            </div>
+            <div class="commentMore">
+              <input
+                      type="button"
+                      class="commentAll"
+                      value="댓글 82개 모두 보기"
+              />
+            </div>
+
+            <!----- 댓글 작성 폼 ------->
+            <div class="comment_field" id="add-comment-post37">
+              <input type="hidden" name="uid" value="123">
+              <input type="text" name="commentText" placeholder="댓글달기..." />
+              <div class="upload_btn m_text">게시</div>
+            </div>
+          </article>
           <article class="contents">
             <header class="top">
               <div class="user_container">
@@ -175,7 +273,6 @@
               <div class="upload_btn m_text">게시</div>
             </div>
           </article>
-
         </div>
         <!-- <input type="hidden" id="page" value="1"> 왜 있는지 모름 (보류)-->
 
